package GameData;

public interface ILostOrWin {
    void AllianceWins();
    void EmpireWins();
}
