@startuml
skinparam classAttributeIconSize 0

package GameData{
    class GameSettings{
        + TieBulletSpeed: final float
        + TieSpeed: final float
        + FirstBossSpeed: final float
        + PlayerBulletSpeed: final float

        -GameSettings()

        + {static} GetInstance():GameSettings
        + bounds():Rect
        + PlaceHolderData(): EntityData
    }
    GameSettings --"1" GameSettings: (static) -instance
    GameSettings -- EntityData:PlayerInitialData >
    GameSettings -- EntityData:PlayerData >
    GameSettings -- EntityData:TieData >
    GameSettings -- EntityData:TieBulletData >
    GameSettings -- EntityData:FirstBossData >


    class CurrentMatchData{
        -score:int = 0
        -CurrentMatchData()

        + getMatchData: CurrentMatchData
        + currentScore:int
        + incScore()
        + resetScore()

    }
    CurrentMatchData -- IBroadcaster: OnScoreChanges: IBroadcaster<Integer>
    CurrentMatchData -- Invoker: invokerScoreChanges: Invoker<Integer>

         interface ILostOrWin {
         {abstract}+AllianceWins()
         {abstract}+EmpireWins()
    }

    class LostOrWin {
         -made:boolean
         +AllianceWins()
         +EmpireWins()
         -creditsAndClose()
    }
    ILostOrWin <|-- LostOrWin
    class MatchResult {
         +AllianceWins()
         +EmpireWins()
         +getInstance(): MatchResult
         -creditsAndClose()
    }
    ILostOrWin <|-- MatchResult
    MatchResult -- MatchResult:Instance
    MatchResult -- "1" ILostOrWin
}
@enduml
